--- a/src/css/specific/banner.css
+++ b/src/css/specific/banner.css
@@ -5,7 +5,7 @@
   height: var(--banner-height);
   position: sticky;
   top: 0;
-  z-index: var(--z-header);
+  z-index: var(--z-banner);
 }
 
 .banner p {
